# brasa-eval

./: .gitignore  README.md  pyproject.toml
configs/: poeta_v2_full_diagnostic.json
data/: manual_vs_original_taxonomy_map.csv  original_poeta_tag_expanded.csv  original_poeta_tag_summary.csv  paper_final_segmentation.csv
outputs/eval_results/: Carolina adapted.json  Gigaverbo adapted.json  Qwen 1.7B Base.json  Qwen3-1.7B-Base.json  QwenRolina3-Base.json  TuQwen3-Base-LR1e5-run1.json
outputs/scorecards/: Carolina adapted_scorecard.csv  Carolina adapted_summary.json  Gigaverbo adapted_scorecard.csv  Gigaverbo adapted_summary.json  Qwen 1.7B Base_scorecard.csv  Qwen 1.7B Base_summary.json  Qwen3-1.7B-Base_scorecard.csv  Qwen3-1.7B-Base_summary.json  QwenRolina3-Base_scorecard.csv  QwenRolina3-Base_summary.json  TuQwen3-Base-LR1e5-run1_scorecard.csv  TuQwen3-Base-LR1e5-run1_summary.json  comparison_table.csv  enem_bluex_subarea_deltas_vs_baseline.csv  enem_bluex_subarea_scores.csv  enem_bluex_subarea_summary.md  original_tag_analysis_note.md  original_tag_breakdown.csv  original_tag_breakdown_pivot.csv  task_deltas.csv
scripts/: analyze_enem_bluex_subareas.py  analyze_original_tags.py  build_paper_segmentation.py  generate_scorecards.py  import_poetav2_results.py  plot_paper_figures.py
tests/: test_integrity.py
